--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+  position: relative;
+}
+
 /* ローディング画面 */
 #loading {
   width: 100vw;
@@ -41,9 +45,9 @@ ul {
   display: flex;
 }
 
-form　{
+form{
    z-index: 3;
   position: absolute;
-  top: 0;
-  right: 0;
+    top: 0;
+  left: 0;
  }
